force-app/main/default/objects/BMCServiceDesk__BMC_DiskDrive__c/BMCServiceDesk__BMC_DiskDrive__c.object-meta.xml
<CustomObject>
    <description>BMC_DiskDrive: CMDB Class that stores information about the capabilities and management of disk drives. A disk drive is a machine that reads data from and writes data to a disk.   This class corresponds to the DMTF CIM_DiskDrive class.</description>
    <label>Disk Drive</label>
    <nameField>
        <label>BMC_DiskDrive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disk Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>