force-app/main/default/objects/BMCServiceDesk__BMC_DiskDrive__c/fields/BMCServiceDesk__SCSIBus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SCSIBus__c</fullName>
    <label>SCSI Bus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>