force-app/main/default/objects/BMCServiceDesk__BMC_DiskDrive__c/fields/BMCServiceDesk__SCSILogicalUnit__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SCSILogicalUnit__c</fullName>
    <label>SCSI Logical Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>