force-app/main/default/objects/BMCServiceDesk__BMC_DiskDrive__c/fields/BMCServiceDesk__SectorsPerTrack__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SectorsPerTrack__c</fullName>
    <label>Sectors Per Track</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>