force-app/main/default/objects/BMCServiceDesk__BMC_DiskDrive__c/fields/BMCServiceDesk__TotalCylinders__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TotalCylinders__c</fullName>
    <label>Total Cylinders</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>