force-app/main/default/objects/BMCServiceDesk__BMC_DiskDrive__c/fields/BMCServiceDesk__TotalTracks__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TotalTracks__c</fullName>
    <label>Total Tracks</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>